bug squashing

--- a/client/components/myGrid/myGrid.css
+++ b/client/components/myGrid/myGrid.css
@@ -26,3 +26,6 @@
   background-color: #ffff99;
   border: .5px solid lightgray;
 }
+.grid{
+  font-weight:bold; 
+}
